--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
             <a href="boohooMan.html"><img class="sale_item" src="images/categories/4.jpg" alt=""></a>
             <a href="boohooMan.html"><img class="sale_item" src="images/categories/5.jpg" alt=""></a>
             <a href="boohooMan.html"><img class="sale_item" src="images/categories/6.jpg" alt=""></a>
-            
+            <a href="boohooMan.html"><img class="sale_item" src="images/categories/7.jpg" alt=""></a>
+            <a href="boohooMan.html"><img class="sale_item" src="images/categories/8.jpg" alt=""></a>
+            <a href="boohooMan.html"><img class="sale_item" src="images/categories/9.jpg" alt=""></a>
+            <a href="boohooMan.html"><img class="sale_item" src="images/categories/10.jpg" alt=""></a>
         </div>
     </main>
     <footer>
